<resources>
    <string name="app_name">PinPointHint</string>

    <!-- Strings used within the registration activity -->
    <string name="registration_activity_title">Registo</string>
    <string name="login_activity_title">Login</string>
    <string name="etRegName">Nome</string>
    <string name="etRegEmail">Correio Electrónico</string>
    <string name="etRegPhone">Contacto Telefónico</string>


    <string name="etLoginEmail">Email</string>
    <string name="etLoginPassword">Password</string>
    <string name="tvRegPassword">Palavra-Passe</string>
    <string name="tvRegPasswordConfirm">Confirmação da Palavra-Passe</string>
    <string name="bRegSubmit">REGISTAR</string>
    <string name="regSubmitMessageOk">Dados submetidos com sucesso</string>

    <!-- Strings used within the submission activity -->
    <string name="submission_activity_title">Submeter Sugestão</string>
    <string name="etSubDescription">Descrição da Sugestão</string>
    <string name="etSubEmail">Destinatário</string>
    <string name="etSubGPS">Coordenadas GPS</string>
    <string name="bSubSubmit">SUBMETER</string>
    <string name="bSubPhoto">FOTOGRAFIA</string>
    <string name="bSubNext">SEGUINTE</string>
    <string name="photoLoaded">Foto carregada com sucesso</string>
    <string name="submissionProcessed">Submissão realizada com sucesso</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_detail">Detail</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>

</resources>
