<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.iscte.daam.pinpointhint.RegistrationActivity"
    android:id="@+id/id_registration">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Nome (min. 3 letras)"
                android:id="@+id/textView5"
                android:layout_above="@+id/etRegName"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etRegName"
                android:layout_above="@+id/etRegEmail"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="0dp"
                android:layout_alignEnd="@+id/etRegEmail" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Email"
                android:id="@+id/textView6"
                android:layout_above="@+id/etRegEmail"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/etRegEmail"
                android:layout_above="@+id/tvRegPassword"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/etRegPassword" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvRegPassword"
                android:id="@+id/tvRegPassword"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etRegPassword"
                android:layout_below="@+id/tvRegPassword"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvRegPasswordConfirm"
                android:id="@+id/tvRegPasswordConfirm"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/etRegPassword"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etRegPasswordConfirm"
                android:layout_below="@+id/tvRegPasswordConfirm"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.14">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/bRegSubmit"
                android:id="@+id/bRegSubmit"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="#19307c"
                android:onClick="submit"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
